--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav {
 }
 
 main {
-    background-image: url("../img/FundoNuvem.jpg");
+    background-color: #ebf5f5;
     background-repeat: repeat;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
     height: 84vh;
