--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav {
 }
 
 main {
-    background: url("/img/Fundo.jpg") ;
+    background: url("/img/Fundo.png") ;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
